<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="341dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="Contraseña"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombreUsuario" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="154dp"
        android:layout_height="33dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/bienvenida_usuario"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/edtNombreUsuario"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="Usuario"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/butIngresar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="100dp"
        android:background="#592E2E"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="ingresarUsuario"
        android:text="@string/boton_ingresar"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:icon="@android:drawable/ic_menu_send"
        app:iconTint="@color/cardview_shadow_end_color"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:rippleColor="#250A0A" />

    <Button
        android:id="@+id/ButRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"

        android:layout_marginEnd="112dp"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="registrarse"
        android:text="@string/ButRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butIngresar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif-black"
        android:text="¿No estas registrado?"
        app:layout_constraintBottom_toTopOf="@+id/ButRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butIngresar"
        app:layout_constraintVertical_bias="0.942" />


</androidx.constraintlayout.widget.ConstraintLayout>