<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".updatepost">

    <include
        android:id="@+id/Toolbar_update"
        layout="@layout/toolbar_detail" />

    <Button
        android:id="@+id/updatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updatePoststring"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateDesc"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/updateDesc"
        android:layout_width="327dp"
        android:layout_height="166dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/PostTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateTitle"
        android:layout_width="324dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/UpPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cloud_upload_24" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/TxtDescription"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImagenPost" />

    <ImageView
        android:id="@+id/ImagenPost"
        android:layout_width="198dp"
        android:layout_height="133dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="38dp"
        android:background="@color/colorPr"
        android:backgroundTint="@color/colorPr"
        app:layout_constraintEnd_toStartOf="@+id/UpPhoto"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/casa1" />

    <ImageButton
        android:id="@+id/CatchPhoto"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toEndOf="@+id/UpPhoto"
        app:layout_constraintTop_toBottomOf="@+id/updateTitle"
        app:srcCompat="@drawable/ic_baseline_camera_alt_24" />
</androidx.constraintlayout.widget.ConstraintLayout>